--- a/styles.css
+++ b/styles.css
@@ -28,7 +28,7 @@ ul {
 /* Portfolio Homepage */
 .container {
     display: grid;
-    grid-template-columns: auto auto auto;
+    grid-template-columns: 33% 33% 33%;
     background-color: pink;
     padding: 10px;
 }
