--- a/styles.css
+++ b/styles.css
@@ -30,7 +30,18 @@ ul {
     display: grid;
     grid-template-columns: 33% 33% 33%;
     background-color: pink;
-    padding: 10px;
+    padding: 0 15px 0 0;
+	gap: 10px 10px;
+}
+.container > div {
+	background-color: #f1f1f1;
+	border: 1px solid black;
+	padding: 1fr;
+	/* font-size: 1em; */
+	text-align: center;
+  }
+.project-thumbnail {
+	width: 150px;
 }
 /* HOMEPAGE */
 
