--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,43 @@
 /*linking in css stylesheet to pull in different style defaults for small/mobile screens- note page was not designed mobile first due to the parameters of this project*/
 @import url('desktop-styles.css') (min-width:800px);
 
-@media (max-width: 799px){
+#portfolio-button {
+	background-color: #ff7400;
+	color: white;
+}
+
+#portfolio-button a {
+	color: white;
+	font-family: "Galindo", sans-serif;
+}
+
+#resume-button {
+	background-color: #ff7400;
+}
+
+#resume-button a {
+	color: white;
+}
+button a {
+	text-decoration: none;
+}
+button a:hover{
+	text-decoration:underline;
+}
+@media screen and (min-width: 600px) {
 	.homepage-head-background {
-	/* width: 100%;
-	height: 100%; */
-	background-size: auto;
-	background: url('portfolio-header.svg');
+		width: 100%;
+		height: 100%;
+		background-size: auto;
+		background: url('portfolio-header.svg');
+		background-repeat: round;
+	}
+}
+@media screen and (max-width: 600px){
+	.homepage-head-background {
+	width: 100%;
+	height: 100%;
+	background: url('portfolio-mobile-header.svg');
 	background-repeat: no-repeat;
 }
 }
@@ -55,13 +86,13 @@ ul {
 /* HOMEPAGE */
 
 /* header for the Homepage*/
-.homepage-head-background {
+/* .homepage-head-background {
 	/* width: 100%;
-	height: 100%; */
+	height: 100%; 
 	background-size: auto;
 	background: url('portfolio-mobile-header.svg');
 	background-repeat: no-repeat;
-}
+} */
 #welcome {
     font-family: "Galindo", sans-serif;
     font-weight: 400;
