responsive design testing

--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,8 @@
 /*linking in css stylesheet to pull in different style defaults for small/mobile screens- note page was not designed mobile first due to the parameters of this project*/
 @import url('desktop-styles.css') (min-width:800px);
 
+
+
 #portfolio-button {
 	background-color: #ff7400;
 	color: white;
@@ -8,7 +10,8 @@
 
 #portfolio-button a {
 	color: white;
-	font-family: "Galindo", sans-serif;
+	font-family: "Cantora One", sans-serif;
+	font-style: normal;
 }
 
 #resume-button {
@@ -17,6 +20,8 @@
 
 #resume-button a {
 	color: white;
+	font-family: "Cantora One", sans-serif;
+	font-style: normal;
 }
 button a {
 	text-decoration: none;
@@ -30,35 +35,54 @@ button a:hover{
 }
 #home-page a {
 	color: black;
+	font-family: ;
 }
 @media screen and (min-width: 600px) {
 	.homepage-head-background {
 		width: 100%;
-		height: 100%;
-		background-size: auto;
+		height: 500px;
+		margin-bottom: 0;
+		background-size: cover;
 		background: url('portfolio-header.svg');
-		background-repeat: round;
+		background-repeat: no-repeat;
+		/*overflow: hidden;*/
+	}
+	h1 {
+		background-color: white;
+		margin-right: 10%;
+		margin-left: 10%;
+		margin-top: 10%;
+		padding: 5px;
+		font-family: 'Gorditas', serif;
+		font-size: 2.5em;
+		text-align: center;
 	}
 }
 @media screen and (max-width: 600px){
 	.homepage-head-background {
 	width: 100%;
-	height: 100%;
+	height: 400px;
+	background-size: cover;
 	background: url('portfolio-mobile-header.svg');
 	background-repeat: no-repeat;
 }
+h1 {
+	margin-left: 10%;
+	margin-right: 10%;
+	margin-top: 20%;
+	margin-bottom: 0;
+	font-size: 2.5em;
+	background-color: white;
 }
+}
+
 /* Styling "defaults" across all pages*/
 body {
 	color: #753EB7;
 	text-align: center;
 	background-color: white;
 }
-nav {
-	text-align: left;
-	font-family: 'Calistoga', serif;
-	font-size: 1.5em;
-}
+
 .attribution {
 	color: #753EB7;
 	background-color: white;
@@ -66,11 +90,6 @@ nav {
 	padding: 5px;
 	margin-top:50px;
 }
-ul {
-	list-style-type: none;
-	text-align: left;
-	padding-left:0;
-	}
 
 /* Portfolio Homepage */
 .container {
@@ -93,13 +112,7 @@ ul {
 /* HOMEPAGE */
 
 /* header for the Homepage*/
-/* .homepage-head-background {
-	/* width: 100%;
-	height: 100%; 
-	background-size: auto;
-	background: url('portfolio-mobile-header.svg');
-	background-repeat: no-repeat;
-} */
+
 #welcome {
     font-family: "Galindo", sans-serif;
     font-weight: 400;
@@ -114,58 +127,8 @@ ul {
 	flex-direction: column;
 }
 
-.closet-graphic picture {
-	width:100%;
-	margin:0;
-}
-.closet-graphic img{
-	width:100%;
-	height:100%;
-}
-div.closet-graphic {
-	position: relative;
-	width:100%;
-}
-.outfit img{
-	width:100%;
-	height:100%;
-}
-
-@media (min-width: 799px){
-
-#pd-closet-graphic {
-	width:20%;
-	position: absolute;
-	top:30%;
-	left:41%;
-}
-#gt-closet-graphic {
-	width:8%;
-	position: absolute;
-	top:30%;
-	left:49%;
-}
-#bt-closet-graphic {
-	width:10%;
-	position: absolute;
-	top:30%;
-	left:51%;
-}
-#ps-closet-graphic {
-	width:14%;
-	position: absolute;
-	top:23.5%;
-	left:53%;
-}
-#ds-closet-graphic {
-	width:10%;
-	position: absolute;
-	top:27.5%;
-	left:58%;
-}
-}
-.outfit:hover {
-	rotate:20deg;
+.project-thumbnail:hover {
+	/*rotate:20deg;*/
 	transform:scale(1.1);
 }
 
@@ -177,178 +140,12 @@ div.closet-graphic {
 	font-size:2em;
 }
 
-/* Homepage Nav Bar Styling */
-
-#home-nav {
-	display:flex;
-	flex-direction:row;
-	align-items: center;
-}
-
-#home-nav-title {
-	display: flex;
-	flex-direction: row;
-	width: 100%;
-}
-
-#navigation-menu {
-	display:flex;
-	flex-direction:column;
-	text-align:center;
-}
-#navigation-menu nav {
-	display:flex;
-	flex-direction:column;
-}
-.menu {
-	display:inline-block;
-	font-size:1.5em;
-	margin-left:8%;
-	padding-right:50px;
-}
-.menu a {
-	text-decoration:none;
-}
-#menu-title {
-	margin-left:8%;
-	text-align:left;
-	font-size: 2em;
-	color: #9F4BF2;
-}
-
-#menu-1 {
-	color:#FD0073;
-}
-#menu-2 {
-	color:#025939;
-}
-#menu-3 {
-	color:#171117;
-}
-#menu-4 {
-	color:#EB6142;
-}
-#menu-5 {
-	color:#9F9E9A;
-}
-
-/*li.menu {
-	text-align:center;
-	align-items:left;
-}*/
-/*adding underlines to sub page links when hovered over for accessibility*/
-.menu a:hover{
-	text-decoration:underline;
-}
-
-/* SUB PAGES */
-
-/*Heading for Sub-Pages*/
 header {
 	color: black;
 	background-color: #000000;
-	padding: 80px 0;
+	padding: 10px 0;
 	width:100%;
-}
 
-.pd-head-background {
-	background: url('images/pink-dress-heading-1.png');
-}
-.ds-head-background {
-	background: url('images/disco-skirt-header-1.svg');
-}
-.gt-head-background {
-	background: url('images/green-top-header-2.svg');
-}
-.ps-head-background {
-	background-color:#FF7ADE;
-}
-h1 {
-	background-color: white;
-	margin-right: 40px;
-	margin-left: 40px;
-	padding: 5px;
-	font-family: 'Gorditas', serif;
-	font-size: 3em;
-}
-.subhead {
-	font-size: 0.75em;
-}
-
-
-/* Grid Layout- for Sub-Pages- note media query specifications for mobile/smaller screens included in separate linked stylesheet*/
-@media (min-width: 799px){
-.outfit-specs {
-	display: grid;
-	grid-template-columns: 1fr 5fr 10fr 1fr;
-	grid-auto-rows: repeat(4, 1fr)
-	column-gap: 50px;
-}
-.subtitle {
-	grid-column-start: 2;
-	font-size:1.5em;
-}
-.content {
-	grid-column-start: 3;
-	padding-left: 50px;
-	text-align:left;
-	padding-top: 20px;
-}
-li {
-	padding: 5px;
-}
-}
-/* Text Styling for Body Pages Content */
-.outfit-specs h2{
-	font-size:1em;
-}
-
-.sub-body {
-	margin-bottom:50px;
-}
-
-@media (min-width: 799px){
-#pd-body-text {
-	color: #FD0073;
-	font-family: 'Calistoga', serif;
-	font-size: 1.5em;
-	letter-spacing:.1rem;
-}
-#pd-body-text .subtitle {
-color: #42202F;
-}
-#gt-body-text {
-	color: #03945F;
-	font-family: 'Calistoga', serif;
-	font-size: 1.5em;
-	letter-spacing:.1rem;
-	}
-#gt-body-text .subtitle {
-color: #025939;
-}
-
-#ds-body-text {
-	color: #9F9E9A;
-	font-family: 'Calistoga', serif;
-	font-size: 1.5em;
-	letter-spacing:.1rem;
-}
-#ds-body-text .subtitle {
-color: #6B6B6B;
-}
-}
-#bt-body-text {
-	color:black;
-	font-family: 'Calistoga', serif;
-	font-size: 1.5em;
-}	
-#ps-body-text {
-	color:#EB6142;
-	font-family: 'Calistoga', serif;
-	font-size: 1.5em;
-}	
-.ll-title {
-	font-size:1.4em;
 }
 
 button {
@@ -357,12 +154,12 @@ button {
 	padding: 20px;
 	font-size: 1.5em;
 	border-radius: 10px;
-	font-family: 'Gorditas', serif;
+	font-family: "Cantora One", sans-serif;
 	margin-top: 20px;
 }
 
 /* Navigation (Buttons) for Sub-Pages- initially set up as links embedded in buttons, had to switch due to code validation issues*/
-.fake-button {
+/*.fake-button {
 	color: white;
 	background-color: #FFCAD7;
 	padding: 20px;
@@ -373,23 +170,8 @@ button {
 	outline: 2px solid black;
 	text-decoration: none;
 }
-
+*/
 a:hover{
 	text-decoration:underline;
 }
 
-#pink-home-button {
-	background-color: #F2055C;
-}
-#disco-home-button {
-	background-color: silver;
-}
-#green-home-button {
-	background-color: #94E572;
-}
-#tee-home-button {
-	background-color: black;
-}
-#pleated-home-button {
-	background-color: #EB6142;
-}
