--- a/desktop-styles.css
+++ b/desktop-styles.css
@@ -1,7 +1,8 @@
 .homepage-head-background {
 	/* width: 100%;
 	height: 100%; */
-	background-size: auto;
+	width: 100%;
+	background-size: cover;
 	background: url('portfolio-header.svg');
-	background-repeat: no-repeat;
+	/* background-repeat: round; */
 }
