--- a/styles.css
+++ b/styles.css
@@ -113,6 +113,12 @@ h1 {
 }
 }
 
+/* Styling the Portfolio Page*/
+h2 {
+	color: black;
+	font-size: 1.25em;
+}
+
 /* Styling "defaults" across all pages*/
 body {
 	color: #753EB7;
