fixing portfolio page aesthetic

--- a/styles.css
+++ b/styles.css
@@ -159,13 +159,13 @@ body {
 .container {
     display: grid;
     grid-template-columns: 33% 33% 33%;
-    background-color: pink;
-    padding: 0 15px 0 0;
+    background-color: #ffffff;
+    padding: 10px 15px 0 0;
 	gap: 10px 10px;
 }
 .container > div {
 	background-color: #f1f1f1;
-	border: 1px solid black;
+	border: 2px solid black;
 	padding: 1fr;
 	/* font-size: 1em; */
 	text-align: center;
