--- a/styles.css
+++ b/styles.css
@@ -136,11 +136,14 @@ h1 {
 }
 
 /* Styling the Portfolio Page*/
-h2 {
+.portfolio-heading {
+	/* width: 90%; */
 	color: black;
-	font-size: 1.25em;
+	font-size: 2vw;
 }
-
+h2 {
+	margin: 0 5% 0 5%;
+}
 /* Styling "defaults" across all pages*/
 body {
 	color: #753EB7;
