--- a/styles.css
+++ b/styles.css
@@ -142,7 +142,11 @@ h1 {
 	font-size: 2vw;
 }
 h2 {
-	margin: 0 5% 0 5%;
+	margin: 3% 5% 3% 5%;
+}
+div img {
+	margin: 0 0 2% 0;
+	vertical-align: bottom;
 }
 /* Styling "defaults" across all pages*/
 body {
