--- a/styles.css
+++ b/styles.css
@@ -57,7 +57,13 @@ button a:hover{
 }
 #home-page a {
 	color: black;
-	font-family: ;
+	/* font-family: ; */
+}
+
+h1 {
+	font-family: "Galindo", sans-serif;
+	font-weight: 400;
+	font-style: normal;
 }
 @media screen and (min-width: 1000px) {
 	.homepage-head-background {
@@ -75,7 +81,7 @@ button a:hover{
 		margin-left: 10%;
 		margin-top: 10%;
 		padding: 5px;
-		font-family: 'Gorditas', serif;
+		/* font-family: "Galindo", sans-serif; */
 		font-size: 2.5em;
 		text-align: center;
 	}
@@ -95,7 +101,7 @@ button a:hover{
 		margin-left: 10%;
 		margin-top: 10%;
 		padding: 5px;
-		font-family: 'Gorditas', serif;
+		/* font-family: "Galindo", sans-serif; */
 		font-size: 2em;
 		text-align: center;
 	}
