--- a/styles.css
+++ b/styles.css
@@ -75,6 +75,15 @@ h1 {
 		background-repeat: no-repeat;
 		/*overflow: hidden;*/
 	}
+	.libguide-head-background {
+		background: url('libguide-header-1000+.svg');
+		background-repeat: no-repeat;
+		background-size: cover;
+		width: 100%
+	}
+	.libguide-h1 {
+		margin: 10% 35% 10% 35%;
+	}
 	h1 {
 		background-color: white;
 		margin-right: 10%;
