--- a/desktop-styles.css
+++ b/desktop-styles.css
@@ -1,8 +1,15 @@
-.homepage-head-background {
-	/* width: 100%;
-	height: 100%; */
-	width: 100%;
-	background-size: cover;
-	background: url('portfolio-header.svg');
-	/* background-repeat: round; */
-}
+	.homepage-head-background {
+		width: 100%;
+		background-size: cover;
+		background: url('portfolio-header.svg');
+		justify-content: center;
+		background-repeat: no-repeat;
+	}
+	h1 {
+		background-color: white;
+		margin: 6vw 20% 6vw 20%;
+		padding: 5px;
+		font-family: "Galindo", sans-serif; 
+		font-size: 4.5vw;
+		text-align: center;
+	}
