--- a/styles.css
+++ b/styles.css
@@ -308,6 +308,19 @@ a:hover{
 .panel {
 	padding: 0 18px;
 	background-color: white;
+	max-height: 0;
 	display: none;
 	overflow: hidden;
+	transition: max-height 0.2s ease-out;
+  }
+.accordion:after {
+	content: '\02795'; /* Unicode character for "plus" sign (+) */
+	font-size: 18px;
+	color: #777;
+	float: right;
+	margin-left: 5px;
+  }
+  
+.active:after {
+	content: "\2796"; /* Unicode character for "minus" sign (-) */
   }
