--- a/styles.css
+++ b/styles.css
@@ -308,7 +308,7 @@ a:hover{
 .panel {
 	padding: 0 18px;
 	background-color: white;
-	max-height: 0;
+	/* max-height: 0; */
 	display: none;
 	overflow: hidden;
 	transition: max-height 0.2s ease-out;
