--- a/landscape-tablets-styles.css
+++ b/landscape-tablets-styles.css
@@ -1,15 +1,13 @@
 	.homepage-head-background {
-		width: 100%;
-		background-size: cover;
+		/* width: 100%; */
+		height: 275px;
+		/* background-size: cover; */
 		background: url('portfolio-header.svg');
 		justify-content: center;
-		background-repeat: no-repeat;
+		/* background-repeat: no-repeat; */
 	}
 	h1 {
-		background-color: white;
 		margin: 6vw 20% 6vw 20%;
 		padding: 5px;
-		font-family: "Galindo", sans-serif; 
 		font-size: 4.5vw;
-		text-align: center;
 	}
