--- a/mobile-styles.css
+++ b/mobile-styles.css
@@ -1,15 +1,8 @@
 .homepage-head-background {
-	width: 100%;
-	height: 400px;
-	background-size: cover;
+	height: 300px;
 	background: url('portfolio-mobile-header.svg');
-	background-repeat: no-repeat;
 }
 h1 {
-	margin-left: 10%;
-	margin-right: 10%;
-	margin-top: 20%;
-	margin-bottom: 0;
-	font-size: 1em;
-	background-color: white;
+	margin: 20% 10% 0 10%;
+	font-size: 2em;
 }
