--- a/tablet-styles.css
+++ b/tablet-styles.css
@@ -1,15 +1,8 @@
 .homepage-head-background {
-		width: 100%;
 		height: 350px;
 		background: url('portfolio-header-480-600.svg');
-		background-size: cover;
-		background-repeat: no-repeat;
 	}
 	h1 {
-		margin-left: 10%;
-		margin-right: 10%;
-		margin-top: 20%;
-		margin-bottom: 0;
+		margin: 20% 10% 0 10%;
 		font-size: 2.5em;
-		background-color: white;
 	}
