work on mobile font size

--- a/styles.css
+++ b/styles.css
@@ -111,7 +111,7 @@ button a:hover{
 .portfolio-heading {
 	/* width: 90%; */
 	color: black;
-	font-size: 2vw;
+	/* font-size: 2vw; */
 }
 h2 {
 	margin: 3% 5% 3% 5%;
