--- a/mobile-styles.css
+++ b/mobile-styles.css
@@ -4,5 +4,11 @@
 }
 h1 {
 	margin: 20% 10% 0 10%;
-	font-size: 2em;
+	font-size: 1.75em;
+}
+.portfolio-heading {
+	font-size: 2vw;
+}
+#portfolio-h1 {
+	font-size: 1em;
 }
