sub-page-layout work

--- a/mobile-styles.css
+++ b/mobile-styles.css
@@ -12,3 +12,15 @@ h1 {
 #portfolio-h1 {
 	font-size: 1em;
 }
+.portfolio-page-content {
+	width: 100%;
+    display: flex;
+	flex-direction: column;
+    background-color: #ffffff;
+    padding: 10px 10px 0 0;
+	gap: 10px 10px;
+}
+.portfolio-page-content > div {
+	background-color: #f1f1f1;
+	padding: 1fr;
+  }
