--- a/styles.css
+++ b/styles.css
@@ -157,13 +157,13 @@ body {
 
 /* Portfolio Page Grid Layout */
 .portfolio-page-content {
-    display: grid;
-    grid-template-columns: 50% 50%;
+    display: flex;
     background-color: #ffffff;
     padding: 10px 10px 0 0;
 	gap: 10px 10px;
 }
 .portfolio-page-content > div {
+	/* width: 50%; */
 	background-color: #f1f1f1;
 	padding: 1fr;
   }
