--- a/extra-large-devices-styles.css
+++ b/extra-large-devices-styles.css
@@ -18,3 +18,14 @@ h1 {
     padding: 5px;
     font-size: 2.5em;
 }
+.portfolio-page-content {
+    display: flex;
+    background-color: #ffffff;
+    padding: 10px 10px 0 0;
+	gap: 10px 10px;
+}
+.portfolio-page-content > div {
+	width: 50%;
+	background-color: #f1f1f1;
+	padding: 1fr;
+  }
