--- a/landscape-tablets-styles.css
+++ b/landscape-tablets-styles.css
@@ -1,13 +1,21 @@
 	.homepage-head-background {
-		/* width: 100%; */
 		height: 275px;
-		/* background-size: cover; */
 		background: url('portfolio-header.svg');
 		justify-content: center;
-		/* background-repeat: no-repeat; */
 	}
 	h1 {
 		margin: 6vw 20% 6vw 20%;
 		padding: 5px;
 		font-size: 4.5vw;
 	}
+	.portfolio-page-content {
+		display: flex;
+		background-color: #ffffff;
+		padding: 10px 10px 0 0;
+		gap: 10px 10px;
+	}
+	.portfolio-page-content > div {
+		width: 50%;
+		background-color: #f1f1f1;
+		padding: 1fr;
+	  }
