--- a/extra-large-devices-styles.css
+++ b/extra-large-devices-styles.css
@@ -18,6 +18,41 @@ h1 {
     padding: 5px;
     font-size: 2.5em;
 }
+.home-container {
+    display: flex;
+    flex-direction: row;
+    /* padding: 0; */
+    background-color: #ffffff;
+}
+.home-container > div {
+    width: 40%;
+    color: black;
+    /* padding: 0; */
+    text-align: left;
+  }
+  .home-container > #about-blurb {
+    width: 90%;
+    margin-left: 5%;
+    font-size: 2vw;
+    text-align: justify;
+  }
+#button-menu {
+    margin-top: 0;
+    display:flex;
+    flex-direction: column;
+    justify-content: center;
+}
+.home-button-layout {
+    margin: 0 10px;
+}
+/* Portfolio Landing Page Styling */
+.portfolio-heading {
+font-size: 2vw;
+}
+#portfolio-h1 {
+font-size: 2.5em;
+}
+/* Portfolio Subpage Styling */
 .portfolio-page-content {
     display: flex;
     background-color: #ffffff;
@@ -29,3 +64,6 @@ h1 {
 	background-color: #f1f1f1;
 	padding: 1fr;
   }
+  button {
+    font-size: 2.5vw;
+}
