--- a/mobile-styles.css
+++ b/mobile-styles.css
@@ -6,6 +6,33 @@ h1 {
 	margin: 20% 10% 0 10%;
 	font-size: 1.75em;
 }
+/* Homepage Styling */
+.home-container {
+    display: flex;
+	flex-direction: column;
+	/* padding: 0; */
+    background-color: #ffffff;
+}
+.home-container > div {
+	width: 95%;
+	color: black;
+	/* padding: 0; */
+	text-align: left;
+  }
+  .home-container > #about-blurb {
+	width: 90%;
+	margin-left: 5%;
+	font-size: 3vw;
+	text-align: left;
+  }
+  #button-menu {
+	display:flex;
+	justify-content: center;
+}
+.home-button-layout {
+	margin: 0 10px;
+}
+/* Portfolio Landing Page Styling */
 .portfolio-heading {
 	font-size: 2vw;
 }
@@ -24,3 +51,6 @@ h1 {
 	background-color: #f1f1f1;
 	padding: 1fr;
   }
+button {
+	font-size: 5vw;
+}
