--- a/tablet-styles.css
+++ b/tablet-styles.css
@@ -1,11 +1,47 @@
+/* Homepage Styling */
 .homepage-head-background {
 		height: 350px;
 		background: url('portfolio-header-480-600.svg');
 	}
 	h1 {
-		margin: 20% 10% 0 10%;
+		margin: 20% 10% 20% 10%;
 		font-size: 2.5em;
 	}
+	.home-container {
+		display: flex;
+		flex-direction: row;
+		/* padding: 0; */
+		background-color: #ffffff;
+	}
+	.home-container > div {
+		width: 70%;
+		color: black;
+		/* padding: 0; */
+		text-align: left;
+	  }
+	  .home-container > #about-blurb {
+		width: 90%;
+		margin-left: 5%;
+		font-size: 3vw;
+		text-align: justify;
+	  }
+	#button-menu {
+		margin-top: 0;
+		display:flex;
+		flex-direction: column;
+		justify-content: center;
+	}
+	.home-button-layout {
+		margin: 0 10px;
+	}
+/* Portfolio Landing Page Styling */
+.portfolio-heading {
+	font-size: 2vw;
+}
+#portfolio-h1 {
+	font-size: 2.5em;
+}
+/* Portfolio Landing Page Styling */
 	.portfolio-page-content {
 		display: flex;
 		flex-direction: column;
@@ -18,3 +54,6 @@
 		background-color: #f1f1f1;
 		padding: 1fr;
 	  }
+button {
+	font-size: 4.75vw;
+}
