--- a/styles.css
+++ b/styles.css
@@ -134,6 +134,7 @@ body {
 	text-align: center;
 	padding: 5px 0 0 0;
 	margin: 5vw 0 0 0;
+	font-size: 3vw;
 }
 /* Portfolio Homepage */
 .container {
@@ -288,3 +289,25 @@ ul {
 	background-color: #ffffff;
 	padding: 1fr;
   }
+
+/* Resume Page Styling */
+#resume-download {
+	color: black;
+	font-size: 5vw;
+	margin-top: 10%;
+}
+.resume-nav a {
+	text-decoration: none;
+	color: #000000;
+	float: left;
+	font-size: 4vw;
+	padding: 1% 2%;
+	margin: 0 0 0 0;
+}
+.resume-nav ul {
+	margin: 2% 0 2% 0;
+}
+.resume-content {
+	display: flex;
+	flex-direction: column;
+}
