--- a/laptops-styles.css
+++ b/laptops-styles.css
@@ -10,6 +10,14 @@
         width: 100%;
         background-position: top center;
 	}
+    .portfolio-head-background {
+        background: url('portfolios-header-laptop+.svg');
+        height: 350px;
+        background-repeat: no-repeat;
+        background-size: cover;
+        width: 100%;
+        background-position: top center;
+    }
 	h1 {
         margin: 10% 30% 10% 30%;
 		padding: 5px;
@@ -48,6 +56,8 @@
 }
 #portfolio-h1 {
 	font-size: 2.5em;
+    margin: 3% 30% 5% 30%
+    padding: 30px 5px 30px 5px;
 }
 /* Portfolio Subpage Styling */
     .portfolio-page-content {
