--- a/laptops-styles.css
+++ b/laptops-styles.css
@@ -56,7 +56,7 @@
 }
 #portfolio-h1 {
 	font-size: 2.5em;
-    margin: 3% 30% 5% 30%
+    margin: 7% 35% 7% 35%;
     padding: 30px 5px 30px 5px;
 }
 /* Portfolio Subpage Styling */
