--- a/landscape-tablets-styles.css
+++ b/landscape-tablets-styles.css
@@ -51,6 +51,9 @@
 }
 #portfolio-h1 {
 	font-size: 2.5em;
+	margin: 6% 39% 10% 38%;
+	padding: 10px;
+
 }
 /* Portfolio SubPage Formatting */
 	.portfolio-page-content {
