--- a/mobile-styles.css
+++ b/mobile-styles.css
@@ -5,6 +5,7 @@
 h1 {
 	margin: 20% 10% 0 10%;
 	font-size: 2em;
+	text-align: center;
 }
 /* Homepage Styling */
 .home-container {
@@ -33,11 +34,38 @@ h1 {
 	margin: 0 10px;
 }
 /* Portfolio Landing Page Styling */
+.portfolio-head-background {
+	height: 400px;
+	background: url('portfolio-head-mobile.svg');
+	background-repeat: no-repeat;
+	background-size: cover;
+	width: 100%;
+	background-position: top center;
+}
 .portfolio-heading {
 	font-size: 2vw;
 }
 #portfolio-h1 {
-	font-size: 2.5em;
+	font-size: 1.5em;
+	margin: 30vw 52% 0 48%;
+	padding: 10px;
+	text-align: center;
+	/* text-align: center; */
+}
+@media screen and (max-width: 400px) {
+	#portfolio-h1 {
+		margin: 37vw 52% 10% 45%;
+	}
+}
+@media screen and (max-width: 300px) {
+	#portfolio-h1 {
+		margin: 48vw 52% 0 45%;
+	}
+}
+@media screen and (max-width: 220px) {
+	#portfolio-h1 {
+		margin: 55vw 52% 0 42%;
+	}
 }
 .portfolio-page-content {
 	width: 100%;
