libguide headers all

--- a/landscape-tablets-styles.css
+++ b/landscape-tablets-styles.css
@@ -70,3 +70,16 @@
 button {
 	font-size: 4.25vw;
 }
+/* Subpage headers */
+#libguide-head-background {
+	background: url('libguide-header-1000+.svg');
+	height: 275px;
+	background-repeat: no-repeat;
+	background-size: cover;
+	width: 100%;
+	background-position: top center;
+}
+.libguide-h1 {
+	font-size: 2em;
+	margin: 10% 27%;
+}
