--- a/laptops-styles.css
+++ b/laptops-styles.css
@@ -74,3 +74,17 @@
 button {
         font-size: 3.5vw;
     }
+/* Subpage Headers */
+    #baaaad-head-background {
+        background: url('baaaad-head-laptop+.svg');
+        background-position: top center;
+        height: 350px;
+        background-repeat: no-repeat;
+        background-size: cover;
+        width: 100%;
+    }
+    .baaaad-h1 {
+        margin: 10% 30% 10% 30%;
+        padding: 5px;
+        font-size: 3em;
+    }
