--- a/tablet-styles.css
+++ b/tablet-styles.css
@@ -93,3 +93,16 @@ button {
 	padding: 5px;
 	font-size: 2em;
 }
+#validator-head-background {
+	background: url('validator-head-midsize.svg');
+	background-position: top center;
+	height: 250px;
+	background-repeat: no-repeat;
+	background-size: cover;
+	width: 100%;
+}
+.validator-h1 {
+	margin: 10% 25% 10% 25%;
+	padding: 5px;
+	font-size: 2em;
+}
