--- a/extra-large-devices-styles.css
+++ b/extra-large-devices-styles.css
@@ -92,3 +92,16 @@ font-size: 2vw;
     padding: 5px;
     font-size: 3em;
 }
+#validator-head-background {
+    background: url('validator-head-laptop+.svg');
+    background-position: top center;
+    height: 400px;
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 100%;
+}
+.validator-h1 {
+    margin: 10% 30% 10% 30%;
+    padding: 5px;
+    font-size: 3em;
+}
