--- a/landscape-tablets-styles.css
+++ b/landscape-tablets-styles.css
@@ -109,3 +109,16 @@ button {
 	padding: 5px;
 	font-size: 2.5em;
 }
+#lib-diversity-head-background {
+    background: url('lib-diversity-head-midsized.svg');
+    background-position: top center;
+    height: 275px;
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 100%;
+}
+.lib-diversity-h1 {
+    margin: 8% 12% 8% 12%;
+    padding: 5px;
+    font-size: 2.25em;
+}
