--- a/laptops-styles.css
+++ b/laptops-styles.css
@@ -101,4 +101,16 @@ button {
         padding: 5px;
         font-size: 3em;
     }
-    
+    #lib-diversity-head-background {
+        background: url('lib-diversity-head-laptop+.svg');
+        background-position: top center;
+        height: 350px;
+        background-repeat: no-repeat;
+        background-size: cover;
+        width: 100%;
+    }
+    .lib-diversity-h1 {
+        margin: 10% 12% 10% 12%;
+        padding: 5px;
+        font-size: 3em;
+    }
