--- a/mobile-styles.css
+++ b/mobile-styles.css
@@ -128,3 +128,16 @@ button {
 	padding: 5px;
 	font-size: 2em;
 }
+#lib-diversity-head-background {
+    background: url('lib-diversity-head-midsized.svg');
+    background-position: top center;
+    height: 300px;
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 100%;
+}
+.lib-diversity-h1 {
+    margin: 18% 5% 18% 5%;
+    padding: 5px;
+    font-size: 1.75em;
+}
