--- a/tablet-styles.css
+++ b/tablet-styles.css
@@ -106,3 +106,16 @@ button {
 	padding: 5px;
 	font-size: 2em;
 }
+#lib-diversity-head-background {
+    background: url('lib-diversity-head-midsized.svg');
+    background-position: top center;
+    height: 250px;
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 100%;
+}
+.lib-diversity-h1 {
+    margin: 8% 9% 8% 9%;
+    padding: 5px;
+    font-size: 2em;
+}
